1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-log
  template:
    metadata:
      labels:
        app: ping-pong-log
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: ping-pong
          image: djblackett/pingpong:v11.4
          volumeMounts:
            - name: shared-image
              mountPath: /tmp/kube
        - name: log-output
          image: djblackett/log-printer:v11.2
          volumeMounts:
            - name: shared-image
              mountPath: /tmp/kube
        - name: timestamp
          image: djblackett/timestamp-writer:v11
          volumeMounts:
            - name: shared-image
              mountPath: /tmp/kube
